change color styling to dark-mode + add background image to body and nav bar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -15,7 +15,7 @@
 }
 
 .header-ex-text{
-  color: white;
+  color: #45A29E;
   display: flex;
   flex-direction: column;
   justify-content: center;
