--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,8 +15,9 @@ html {
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
+  color: #66FCF1;
+  background-color: #1F2833;
+  background-image: url(http://www.transparenttextures.com/patterns/gun-metal.png);
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 }
