--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,7 @@
 /* Navigation Bar General */
 nav {
-  background: #4056A1;
+  background: #0B0C10;
+  background-image: url(http://www.transparenttextures.com/patterns/gun-metal.png);
   height: 120px;
   padding: 1.5em;
   display:flex;
@@ -12,7 +13,7 @@ nav {
 #logo {
   font-family: "Bungee", cursive;
   font-size: 150%;
-  color: #FFFF;
+  color: #66FCF1;
 }
 
 .nav-left {
@@ -25,7 +26,7 @@ nav {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
-  color: #FFFF;
+  color: #45A29E;
 }
 
 /* fas fa-angle-double-down Icon */
