--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -15,7 +15,7 @@
 }
 
 .header-ex-text{
-  color: #45A29E;
+  color: #66FCF1;
   display: flex;
   flex-direction: column;
   justify-content: center;
