--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,20 @@ html {
  */
 
 body {
-  color: #66FCF1;
+  color: #45A29E;
   background-color: #1F2833;
-  background-image: url(http://www.transparenttextures.com/patterns/gun-metal.png);
+  background-image: url("https://www.transparenttextures.com/patterns/navy.png");
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  font-size: 100%;
+  width: 90%;
+  justify-content: center;
+  align-self: center;
 }
 
 /*
