--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -24,8 +24,9 @@ main {
 /* Tweet text entry area */
 #text-box {
   width: 100%;
-  padding: 10px;
+  padding: 30px;
   background-color: #b5f7f7;
+  resize: none;
 }
 
 /* Tweet submit button and Counter */
