add new css styling for other-tweet, implement in index.html

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,7 +27,7 @@ body {
 /* Main area - Container class */
 .container {
   font-size: 100%;
-  width: 100;
+  width: 40%;
   justify-content: center;
   align-self: center;
 }
