--- a/public/styles/other-tweet.css
+++ b/public/styles/other-tweet.css
@@ -3,8 +3,6 @@
   padding: 15px;
   border: 3px solid #45A29E;
   margin-top: 80px;
-  /* padding: 50px; */
-  /* box-sizing: content-box; */
 }
 
 .other-tweet {
@@ -28,8 +26,24 @@
   display: block;
 }
 
-#message-icon {
+.message-icon {
   display: inline-block;
-  margin: 0 0,5rem;
-  position: absolute; right: 0.5rem 
+  margin: 0 0.5rem;
+  position: absolute; right: 0.5rem;
+}
+
+.other-tweets:hover {
+  box-shadow: 3px 3px #45A29E
+}
+
+#icon-flag:hover {
+  color: white;
+}
+
+#icon-retweet:hover {
+  color: white;
+}
+
+#icon-heart:hover {
+  color: rgb(248, 160, 175);
 }
