--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,10 @@
-#main-header {
+#body-header {
   height: 400px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 5em;
 }
 
 /* Header Profile Picture location */
