add new elements in other-tweet header for html for username, profile icon + tweeterhandler. add css styling to keep all new elements inline

--- a/public/styles/other-tweet.css
+++ b/public/styles/other-tweet.css
@@ -16,6 +16,17 @@
   padding: 0.5em 0;
 }
 
+.tweeter-handle {
+  display: inline-block;
+  margin: 0 0.5rem;
+  position: absolute; right: 0.5rem;
+}
+
+.user-name {
+  display: inline-block;
+  margin: 0 0.5rem;
+}
+
 .other-tweet-body {
   display: block;
   padding: 0.5em 0;
