--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,6 +32,7 @@ body {
   align-self: center;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+/* Error Message */
+.alert-message {
+  color: rgb(184, 66, 66);
+}
