--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,7 +32,7 @@ body {
   align-self: center;
 }
 
-/* Error Message Alert */
+/* Message Alert for Alerts */
 .alert-message {
   color: rgb(184, 66, 66);
 }
