add in word-wrap and word-break to the tweet text-box container

--- a/public/styles/other-tweet.css
+++ b/public/styles/other-tweet.css
@@ -44,6 +44,8 @@
   display: block;
   padding: 0.5em 0;
   border-bottom:1px solid #45A29E;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 /* other-tweet footer area */
