--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,7 +19,7 @@ body {
   background-color: #1F2833;
   background-image: url("https://www.transparenttextures.com/patterns/navy.png");
   font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Bungee', sans-serif;
   display: flex;
   flex-direction: column;
 }
