--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -27,6 +27,26 @@ nav button {
   cursor: pointer;
 }
 
+nav button:hover {
+  color: #b5f7f7;
+}
+
+nav button:before {
+  content: '';
+  display: block;
+  height: 5px;
+  background-color: white;
+  position: sticky;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+nav button:hover::before {
+  width: 100%;
+}
+
 /* New Tweet - Title area */
 .new-tweet h2 {
   border-bottom:2px solid #45A29E;
