--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -35,7 +35,7 @@ nav button:before {
   content: '';
   display: block;
   height: 5px;
-  background-color: white;
+  background-color:#45A29E;
   position: sticky;
   top: 0;
   width: 0%;
