add functionality to nav-right Create Tweet button to hide or show #new-tweet-id area on click. additional code to remove bugs was added

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -17,6 +17,10 @@ main {
   color: #66FCF1;
 }
 
+.hidden-tweet {
+  display: none;
+}
+
 nav button {
   background-color: transparent;
   background-repeat: no-repeat;
