change styling to make it more in line with responsive design

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -29,7 +29,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 /* fas fa-angle-double-down Icon */
