--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,7 +18,7 @@ body {
   color: #45A29E;
   background-color: #1F2833;
   background-image: url("https://www.transparenttextures.com/patterns/navy.png");
-  font-size: 24px;
+  font-size: 1.5em;
   font-family: 'Bungee', sans-serif;
   display: flex;
   flex-direction: column;
