--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -13,7 +13,7 @@
   display: none;
 }
 
-
+/* nav button */
 nav button {
   background-color: transparent;
   background-repeat: no-repeat;
@@ -24,10 +24,12 @@ nav button {
   cursor: pointer;
 }
 
+/* nav button - hover */
 nav button:hover {
   color: #b5f7f7;
 }
 
+/* nav button - before */
 nav button:before {
   content: '';
   display: block;
@@ -40,16 +42,17 @@ nav button:before {
   transition: all ease-in-out 250ms;
 }
 
+/* nav button - hover before */
 nav button:hover::before {
   width: 100%;
 }
 
-/* New Tweet - Title area */
+/* new-tweet - Title area */
 .new-tweet h2 {
   border-bottom:2px solid #45A29E;
 }
 
-/* Tweet text entry area */
+/* new tweet text-box entry area */
 #text-box {
   width: 100%;
   height: 165px;
@@ -58,12 +61,12 @@ nav button:hover::before {
   resize: none;
 }
 
-/* Tweet text entry area hover effect */
+/* new-tweet text-box entry area hover */
 #text-box:hover {
   box-shadow: 3px 3px #45A29E
 }
 
-/* Tweet submit button and Counter */
+/* new-tweet submit button and Counter */
 .text-area {
   display: flex;
   flex-direction: row;
@@ -71,7 +74,7 @@ nav button:hover::before {
   padding-right: 10px; 
 }
 
-/* Tweet submit button - specific */
+/* new-tweet submit button - specific */
 main button {
   font-weight: bold;
   background-color: #45A29E;
@@ -80,12 +83,12 @@ main button {
   margin-top: 10px;
 }
 
-/* Tweet submit button - hover effect */
+/* tweet submit button - hover */
 main button:hover {
   box-shadow: 1px 1px #b5f7f7
 }
 
-/* Message Alert for Alerts */
+/* alert-message for Alerts */
 .alert-message {
   color: rgb(184, 66, 66);
 }
