add additional styling + comments

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -15,7 +15,7 @@ nav {
 /* TWEETER Icon */
 #logo {
   color: #66FCF1;
-  font-family: "Bungee", cursive;
+  font-family: 'Bungee';
   font-size: 150%;
 }
 
