--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,7 @@ body {
 
 /* Main area */
 main {
-  font-family: "Bungee";
+  font-family: 'Bungee';
   margin-top: 5em;
 }
 
@@ -55,6 +55,7 @@ main {
     outline: red solid 1px;
   }
 
+  /* main .container */
   .container {
     width: 70%;
     flex-direction: column;
@@ -64,12 +65,18 @@ main {
   .new-tweet {
     width: 80%;
     outline: yellow solid 1px;
+    align-self: center;
+    margin-left: 5em;
   }
 
   .other-tweet {
     width: 80%;
     outline: blue solid 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
     align-self: center;
+    /* margin-left: 5em; */
   }
 }
 
