remove styling margins for messages, remove excess code no longer used

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -52,25 +52,24 @@ main {
     margin-top: 5em;
   }
 
-  #body-header {
-    width: 30%;
-    min-width: 320px;
-    max-width: 30vw;
-    /* outline: red solid 1px; */
-  }
-
   /* main .container */
   .container {
     width: 70%;
     flex-direction: column;
-    /* outline: blue solid 1px; */
+    outline: blue solid 1px;
+  }
+
+  #body-header {
+    width: 30%;
+    min-width: 320px;
+    max-width: 30vw;
+    outline: red solid 1px;
   }
 
   .new-tweet {
     width: 80%;
-    /* outline: yellow solid 1px; */
+    outline: yellow solid 1px;
     align-self: center;
-    /* margin-left: 5em; */
   }
 
   .other-tweet {
@@ -82,23 +81,3 @@ main {
     align-self: center;
   }
 }
-
-/* @media screen and (min-width: 1000px) {
-  .other-tweets, 
-  .new-tweet {
-    width: 80%;
-  }
-
-  .other-tweet {
-    justify-content: right;
-    width: 80%;
-  }
-
-  .container {
-    align-items: flex-start;
-    justify-content: right;
-    flex-direction: column;
-  }
-} */
-
-/* breakpoint 1000 - other-tweet shift right. 80% */
