--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,6 +32,40 @@ nav {
   align-items: center;
 }
 
+/* nav button */
+nav button {
+  background-color: transparent;
+  background-repeat: no-repeat;
+  outline: none;
+  border: none;
+  margin-bottom: 15px;
+  color: #66FCF1;
+  cursor: pointer;
+}
+
+/* nav button - hover */
+nav button:hover {
+  color: #b5f7f7;
+}
+
+/* nav button - before */
+nav button:before {
+  content: '';
+  display: block;
+  height: 5px;
+  background-color:#45A29E;
+  position: sticky;
+  top: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+/* nav button - hover before */
+nav button:hover::before {
+  width: 100%;
+}
+
 /* fas fa-angle-double-down Icon */
 i {
   color: #66FCF1;
