--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -19,7 +19,7 @@
 
 /* Header Profile Picture Name */
 .header-ex-text{
-  color: #66FCF1;
+  color: #FFCB9A;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,4 +32,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #66FCF1;
 }
