--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -19,6 +19,11 @@
   border-bottom:2px solid #45A29E;
 }
 
+/* new-tweet - bubble icon */
+.new-tweet i {
+  color: #FFCB9A;
+}
+
 /* new tweet text-box entry area */
 #text-box {
   width: 100%;
@@ -30,7 +35,7 @@
 
 /* new-tweet text-box entry area hover */
 #text-box:hover {
-  box-shadow: 3px 3px #45A29E
+  box-shadow: 3px 3px #45A29E;
 }
 
 /* new-tweet submit button and Counter */
@@ -44,7 +49,7 @@
 /* new-tweet submit button - specific */
 main button {
   font-weight: bold;
-  background-color: #45A29E;
+  background-color: #FFCB9A;
   border-radius: 8px;
   padding: 10px;
   margin-top: 10px;
