font changes throughout to Source Sans Pro for readability, formatting changes to index.html to clean up code

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,7 @@ body {
 
 /* Main area */
 main {
-  font-family: 'Bungee', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   flex-direction: column;
 }
 
